networking/kyc-credit-check-advanced-k8-istio-mtls.yml
apiVersion: v1
kind: Service
metadata:
  name: kyc-credit-check-advanced
  labels:
    app: kyc-credit-check-advanced
    service: kyc-credit-check-advanced
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: kyc-credit-check-advanced
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kyc-credit-check-advanced
  labels:
    app: kyc-credit-check-advanced
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kyc-credit-check-advanced
      version: v1
  template:
    metadata:
      labels:
        app: kyc-credit-check-advanced
        version: v1
    spec:
      serviceAccountName: kyc-credit-check-advanced
      containers:
      - name: kyc-credit-check-advanced
        image: vijayredkar/kyc-credit-check-advanced:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        securityContext:
          runAsUser: 1000
      volumes:
      - name: tmp
        emptyDir: {}
---
