networking/kyc-credit-check-basic-k8-istio.yml
apiVersion: v1
kind: Service
metadata:
  name: kyc-credit-check-basic
  labels:
    app: kyc-credit-check-basic
    service: kyc-credit-check-basic
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: kyc-credit-check-basic
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kyc-credit-check-basic
  labels:
    app: kyc-credit-check-basic
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kyc-credit-check-basic
      version: v1
  template:
    metadata:
      labels:
        app: kyc-credit-check-basic
        version: v1
    spec:
      serviceAccountName: kyc-credit-check-basic
      containers:
      - name: kyc-credit-check-basic
        image: vijayredkar/kyc-credit-check-basic:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        securityContext:
          runAsUser: 1000
      volumes:
      - name: tmp
        emptyDir: {}
---
