networking/kyc-aggregator-mgt-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kyc-aggregator-mgt
spec:
  host: kyc-aggregator-mgt
  subsets:
  - name: v1
    labels:
      version: v1
---
