networking/kyc-aggregator-mgt-istio-routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kyc
  namespace: default
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kyc
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - kyc
  http:
  - match:
    - uri:
        prefix: "/kyc/v1/customer"
    - uri:
        prefix: "/kyc/v1/customer/"
    route:
    - destination:
        host: kyc-aggregator-mgt.default.svc.cluster.local
        port:
          number: 8080
---
