networking/kyc-credit-check-basic-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kyc-credit-check-basic
spec:
  host: kyc-credit-check-basic
  subsets:
  - name: v1
    labels:
      version: v1
---
