networking/kyc-credit-check-istio-routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kyc-credit-check
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - kyc
  http:
  - match:
    - uri:
        prefix: "/credit-check/basic"
    route:
    - destination:
        host: kyc-credit-check-basic.default.svc.cluster.local
  - match:
    - uri:
        prefix: "/credit-check/advanced"
    route:
    - destination:
        host: kyc-credit-check-advanced.default.svc.cluster.local
  - match:
    - uri:
        prefix: "/credit-check/report"
    route:
    - destination:
        host: kyc-credit-check-basic.default.svc.cluster.local
      weight: 50
    - destination:
        host: kyc-credit-check-advanced.default.svc.cluster.local
      weight: 50
---
